.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/arg_enum_proc_macro-0.3.4/tests/ui/complex-enum.stderr
error: proc-macro derive panicked
 --> $DIR/complex-enum.rs:9:10
  |
9 | #[derive(ArgEnum)]
  |          ^^^^^^^
  |
  = help: message: Only enum with unit variants are supported!
          Variant Complex::B is not an unit variant
