.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/arg_enum_proc_macro-0.3.4/tests/ui/complex-enum.rs
use arg_enum_proc_macro::ArgEnum;

pub enum Foo {
    Bar,
    /// Foo
    Baz,
}

#[derive(ArgEnum)]
pub enum Complex {
    A,
    B(Foo),
    C { a: usize, b: usize },
}

fn main() {}
